bubba-frontend (1.2.4.33) claire estelle; urgency=low

  * Enable/Disable wlan last in config sequence to make sure we have a 
    consitent state

 -- Tor Krill <tor@excito.com>  Mon, 11 Jan 2010 11:28:54 +0100

bubba-frontend (1.2.4.32) claire estelle; urgency=low

  * due to lack of DFS in ath9k disable usage of any band marked as "passive
    scanning" 

 -- Carl Fürstenberg <carl@excito.com>  Mon, 11 Jan 2010 09:36:42 +0100

bubba-frontend (1.2.4.31) claire estelle; urgency=low

  * Fix more regressions :( 

 -- Tor Krill <tor@excito.com>  Mon, 11 Jan 2010 00:46:02 +0100

bubba-frontend (1.2.4.30) claire estelle; urgency=low

  * Only add gateway to IF config if non zero 

 -- Tor Krill <tor@excito.com>  Sun, 10 Jan 2010 23:00:19 +0100

bubba-frontend (1.2.4.29) claire estelle; urgency=low

  * adding versioned dependice to libxml-libxml-perl (>= 1.66-1) 

 -- Carl Fürstenberg <carl@excito.com>  Fri, 08 Jan 2010 20:05:46 +0100

bubba-frontend (1.2.4.28) claire estelle; urgency=low

  * and yet another one :(

 -- Carl Fürstenberg <carl@excito.com>  Fri, 08 Jan 2010 19:58:52 +0100

bubba-frontend (1.2.4.27) claire estelle; urgency=low

  * merge more missing channel stuff 

 -- Carl Fürstenberg <carl@excito.com>  Fri, 08 Jan 2010 19:47:11 +0100

bubba-frontend (1.2.4.26) claire estelle; urgency=low

  * merge important stuff missing from a merge :(

 -- Carl Fürstenberg <carl@excito.com>  Fri, 08 Jan 2010 19:23:45 +0100

bubba-frontend (1.2.4.25) claire estelle; urgency=low

  * fix lanupdate and dhcpd 

 -- Carl Fürstenberg <carl@excito.com>  Fri, 08 Jan 2010 17:50:29 +0100

bubba-frontend (1.2.4.24) claire estelle; urgency=low

  * remove debug print_r 

 -- Carl Fürstenberg <carl@excito.com>  Fri, 08 Jan 2010 17:31:43 +0100

bubba-frontend (1.2.4.23) claire estelle; urgency=low

  * svn add

 -- Carl Fürstenberg <carl@excito.com>  Fri, 08 Jan 2010 17:29:29 +0100

bubba-frontend (1.2.4.22) claire estelle; urgency=low

  * Network manager and profile stuff
