@@ -3,7 +3,7 @@
 <table>
 <tr>
 	<td><label for="ssid"><?=t("SSID")?></label></td>
-	<td><input type="text" name="ssid" id="ssid" value="<?=$ssid?>"/></td>
+	<td><input disabled="disabled" type="text" name="ssid" id="ssid" value="<?=$ssid?>"/></td>
 </tr>
 <tr>
 	<td>
@@ -16,7 +16,7 @@
 	</label>
 	</td>
 	<td>
-	<input 
+	<input disabled="disabled" 
 		type="text" 
 		class="password"
 		name="password" 
@@ -27,7 +27,7 @@
 </tr>
 <tr>
 	<td><label for="enabled"><?=t("Enabled")?></label></td>
-	<td><input type="checkbox" name="enabled" id="enabled" <?if($enabled):?>checked="checked"<?endif?>/></td>
+	<td><input disabled="disabled" type="checkbox" name="enabled" id="enabled" <?if($enabled):?>checked="checked"<?endif?>/></td>
 </tr>
 </table>
 
@@ -38,7 +38,7 @@
 <table>
 <tr>
 	<td><label for="mode"><?=t("Type")?></label></td>
-	<td><select id="mode" name="mode"  title="<?=t("The mode of wLAN to use")?>">
+	<td><select disabled="disabled" id="mode" name="mode"  title="<?=t("The mode of wLAN to use")?>">
 <?foreach($modes as $mode):?>
 	<option value="<?=$mode?>" <?if($mode == $current_mode):?>selected="selected"<?endif?>><?=t("wlan_title_mode_$mode")?></option>
 <?endforeach?>
@@ -47,7 +47,7 @@
 </tr>
 <tr>
 	<td><label for="encryption"><?=t("Encryption")?></label></td>
-	<td><select id="encryption" name="encryption" title="<?=t("The encryption to use")?>">
+	<td><select disabled="disabled" id="encryption" name="encryption" title="<?=t("The encryption to use")?>">
 <?foreach($encryptions as $encryption):?>
 	<option value="<?=$encryption?>" <?if($encryption == $current_encryption):?>selected="selected"<?endif?>><?=t("wlan_title_encryption_$encryption")?></option>
 <?endforeach?>
@@ -58,7 +58,8 @@
 <tr>
 	<td><label for="channel"><?=t("Channel")?></label></td>
     <td>
-    <select id="channel" name="channel" title="<?=t("The channel to use")?>">
+	<select disabled="disabled" id="channel" name="channel" title="<?=t("The channel to use")?>">
+<?if(false):?>
 <?foreach($bands as $band => $channels):?>
     <optgroup label="Band <?=$band?>">
 <?foreach($channels as $channel):?>
@@ -66,6 +67,7 @@
 <?endforeach?>
     </optgroup>
 <?endforeach?>
+<?endif?>
     </select>
 	</td>
 </tr>
@@ -75,7 +77,7 @@
 </div>
 </fieldset>
 
-<input type="submit" value='<?=t('Update')?>' name='update'/>
+<input disabled="disabled" type="submit" value='<?=t('Update')?>' name='update'/>
 
 </form>
 </fieldset>
